// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentColumn Snapshots with a color passed in matches snapshot 1`] = `
<div
  class="ContentColumn ContentColumn--blue"
>
  <div
    class="ContentColumn-link"
  >
    <router-link
      to="testPath"
    >
      <h2
        class="ContentColumn-title"
      >
        title
      </h2>
       
      <img
        class="ContentColumn-icon"
        src="http://placeholder.pics/svg/300"
      />
       
      <div
        class="ContentColumn-description"
      >
        <p>
          test preamble
        </p>
      </div>
    </router-link>
     
    <!---->
  </div>
</div>
`;

exports[`ContentColumn Snapshots without a color passed in matches snapshot 1`] = `
<div
  class="ContentColumn ContentColumn--brown"
>
  <div
    class="ContentColumn-link"
  >
    <router-link
      to="testPath"
    >
      <h2
        class="ContentColumn-title"
      >
        title
      </h2>
       
      <img
        class="ContentColumn-icon"
        src="http://placeholder.pics/svg/300"
      />
       
      <div
        class="ContentColumn-description"
      >
        <p>
          test preamble
        </p>
      </div>
    </router-link>
     
    <!---->
  </div>
</div>
`;
